Some Fixes